# ZSBIS

./: .gitignore  index.html  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: supabase.ts
src/styles/: style.css
