[package]
name = "zed_backup_configs"
version = "1.0.0"
authors = ["jotave"]
edition = "2021"

[lib]
name = "zed_backup_configs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
json_comments = "0.2.2"
json5 = "1.3.0"
